fixes bug with author class hiding behind background

--- a/main.css
+++ b/main.css
@@ -333,7 +333,7 @@ section {
             black);
     background-clip: text;
     color: transparent;
-    background-size: 500%;
+    background-size: 300%;
     animation: author-bg 9s infinite alternate;
 }
 
